tempfile/async-trait/tests/ui/lifetime-defined-here.stderr
error: lifetime may not live long enough
  --> tests/ui/lifetime-defined-here.rs:12:49
   |
12 |     async fn bar(&self, x: &str, y: &'_ str) -> &'static str {
   |                  -                              ^^^^^^^^^^^^ type annotation requires that `'life0` must outlive `'static`
   |                  |
   |                  lifetime `'life0` defined here

error: lifetime may not live long enough
  --> tests/ui/lifetime-defined-here.rs:12:49
   |
12 |     async fn bar(&self, x: &str, y: &'_ str) -> &'static str {
   |                            -                    ^^^^^^^^^^^^ type annotation requires that `'life1` must outlive `'static`
   |                            |
   |                            lifetime `'life1` defined here

error: lifetime may not live long enough
  --> tests/ui/lifetime-defined-here.rs:12:49
   |
12 |     async fn bar(&self, x: &str, y: &'_ str) -> &'static str {
   |                                      --         ^^^^^^^^^^^^ type annotation requires that `'life2` must outlive `'static`
   |                                      |
   |                                      lifetime `'life2` defined here

help: the following changes may resolve your lifetime errors
  |
  = help: replace `'life0` with `'static`
  = help: replace `'life1` with `'static`
  = help: replace `'life2` with `'static`
